src/app/components/machinechart/machinechart.component.scss
@import "../../../theme/variables.scss";

.nothingfound ion-icon {
  width: 100%;
  display: flex;
  justify-content: center;
  text-align: center;
  padding-bottom: 12px;
  font-size: 55px;
  color: var(--ion-text-color-lighter);
}

.nothingfound {
  text-align: center;
  padding: 50px;
  margin-left: 6%;
  margin-right: 6%;
  margin-top: 45px;
  color: var(--ion-text-color-lighter);
}

.circle {
  margin-top: 6px;
  width: 9px;
  height: 9px;
  border-radius: 50%;
  opacity: 0.85;
}

.offline {
  background-color: var(--ion-color-danger);
}

.attention {
  background-color: var(--ion-color-warning-shade);
}

.online {
  background-color: var(--ion-color-success);
}

ion-card-header {
  --background: var(--ion-tab-bar-background);
  background: var(--ion-tab-bar-background);
  padding-bottom: 0px !important;
  margin-bottom: 0px !important;


}

ion-card-subtitle {
  --background: var(--ion-tab-bar-background) !important;
  background: var(--ion-tab-bar-background) !important;
  height: 28px;
}

.more-icon {
  opacity: 0.7;
}

